--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -192,3 +192,51 @@ video, img {
 .button.clear-history-btn {
   background-color: #ff4d4d;  /* Color rojo para borrar el historial */
 }
+
+.profile-page {
+  padding: 20px;
+}
+
+.profile-section {
+  margin-bottom: 30px;
+  padding: 20px;
+  background-color: #f8f8f8;
+  border-radius: 10px;
+}
+
+.profile-section h3 {
+  margin-bottom: 15px;
+  font-size: 20px;
+  color: #005f73;
+}
+
+.profile-section p {
+  font-size: 16px;
+}
+
+.profile-section ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+.profile-section ul li {
+  background-color: #e0f7fa;
+  padding: 10px;
+  margin: 5px 0;
+  border-radius: 5px;
+}
+
+.button {
+  padding: 10px 20px;
+  font-size: 16px;
+  color: white;
+  background-color: #56c8d8;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  margin-top: 10px;
+}
+
+.edit-btn {
+  background-color: #00796b;
+}
